--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,6 @@
 <link rel = "stylesheet" href = "css/simple.css">
 </head>
 <body>
-<h1>hello</h1>
-<p> hello world</p>
+<h2>lorem</h2>
 </body>
 </html>
